Fix scrollbar showing in video component

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -19,6 +19,7 @@ html {
   overflow: scroll;
   scroll-snap-type: y mandatory;
   position: relative;
+  scrollbar-width: none;
 }
 
 .app_videos::-webkit-scrollbar {
